--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "thinkphp",
         "ORM"
     ],
-    "homepage": "fladminvue.com",
+    "homepage": "http://fladminvue.com",
     "license": "Apache-2.0",
     "authors": [
         {
